<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance Management System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login Page -->
    <string name="title_activity_login">Login Here</string>

    <!-- Home Page -->
    <string name="title_activity_home">Home</string>
    <string name="logout">Logout</string>
    <string name="mngBtn">Management</string>
    <string name="taskMgr">Task Manager</string>
    <string name="attendance">Attendance</string>
    <string name="title_activity_attendance">Attendance</string>

    <!-- Login -->
    <string name="ULogin">Login</string>
    <string name="UserName">UserEmail</string>
    <string name="Password">Password</string>
    <string name="Uforgot">Forgot Password?</string>
    <string name="Usignin">Sign in</string>

    <!-- Management -->
    <string name=" Authority"> Authority</string>
    <string name="Department">Department</string>
    <string name="RoleAsign">RoleAsign</string>
    <string name="Batch">Batch</string>
    <string name="Student">Student</string>
    <string name="Subject">Subject</string>

    <!-- RoleAssignment -->
    <string name="role_code_heading">Role Code</string>
    <string name="role_name_heading">Role Name</string>

    <!-- Semester -->
    <string name="sem_id_heading">Semester ID</string>
    <string name="sem_name_heading">Semester Name</string>

    <!-- Department -->
    <string name="dept_code">Dept Code</string>
    <string name="dept_name">Dept Name</string>

    <!-- Task Manager -->
    <string name="title_activity_task_manager">Task Manager</string>
    <string name="heading_teacher_name">Teacher Name</string>
    <string name="title_activity_authority_details">AuthorityDetails</string>
    <string name="title_activity_department">Department</string>
    <string name="title_activity_role_assign">RoleAssign</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="title_activity_role_asign_adapter">RoleAsignAdapter</string>
    <string name="slot_start">Slot Start Time :</string>
    <string name="slot_end">Slot End Time :</string>
    <string name="task_date">Date :</string>
    <string name="task_dept_name">Department:</string>
    <string name="task_sem_name">Semester Name :</string>
    <string name="task_sub_name">Subject Name :</string>
    <string name="task_teacher_name">Teacher Name :</string>

    <!-- Others -->
    <string name="heading_line">_______________</string>
    <string name="title_activity_semester_adapter">SemesterAdapter</string>
    <string name="title_activity_semester">SemesterActivity</string>
    <string name="title_activity_department_adapter">DepartmentAdapter</string>
    <string name="title_activity_subject_adapter">SubjectAdapter</string>
    <string name="title_activity_authority_adapter">AuthorityAdapter</string>

</resources>
