<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.iamtop.amsandroid.taskmanager.TaskDetailsActivity" >

    <TextView
        android:id="@+id/slot_start_textview"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/slot_start" />
    <TextView
        android:id="@+id/slot_start_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello_world" />
    <TextView
        android:id="@+id/slot_end_textview"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/slot_start_textview"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/slot_end" />
    <TextView
        android:id="@+id/slot_end_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/slot_start_textview"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello_world" />
    <TextView
        android:id="@+id/task_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/slot_end_textview"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/task_date" />
    <TextView
        android:id="@+id/task_date"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/slot_end_textview"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello_world" />
    <TextView
        android:id="@+id/task_dept_textview"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_date_textview"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/task_dept_name" />
    <TextView
        android:id="@+id/task_dept"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_date_textview"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello_world" />
    <TextView
        android:id="@+id/task_sem_textview"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_dept_textview"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/task_sem_name" />
     <TextView
        android:id="@+id/task_sem"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_dept_textview"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello_world" />
    <TextView
        android:id="@+id/task_sub_textview"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_sem_textview"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/task_sub_name" />
    <TextView
        android:id="@+id/task_sub"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_sem_textview"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
       android:text="@string/hello_world" />
    <TextView
        android:id="@+id/task_teacher_textview"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_sub_textview"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/task_teacher_name" />
    <TextView
        android:id="@+id/task_teacher"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/task_sub_textview"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello_world" />
    <Button 
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="ok"
        android:textAlignment="gravity"
        android:textColor="#E65100"
        android:background="#00897B"
        android:onClick="clickOk"
        />

</RelativeLayout>
