<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    tools:context="com.iamtop.amsandroid.RoleAssign" >

    <TextView
        android:id="@+id/role_code_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_code_heading"
        android:paddingLeft="15dp"
        android:paddingTop="10dp" />
    <TextView 
        android:id="@+id/role_code_heading_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/role_code_heading"
        android:text="@string/heading_line"
        />
    <TextView 
        android:id="@+id/role_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/role_code_heading"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:text="@string/role_name_heading"/>
    <TextView 
        android:id="@+id/role_code_heading_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/role_name_heading"
        android:layout_toRightOf="@id/role_code_heading_line1"
        android:paddingLeft="30dp"
        android:text="@string/heading_line"/>
    <ListView 
        android:id="@+id/role_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/role_code_heading_line1"
        android:paddingLeft="10dp">
        
    </ListView>

</RelativeLayout>
