<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iamtop.amsandroid.managementboard.semester.SemesterActivity" >

    <TextView
        android:id="@+id/sem_id_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:text="@string/sem_id_heading"
        
         />
    <TextView 
        android:id="@+id/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sem_id_heading"
        android:text="@string/heading_line"
        android:textColor="#757575"/>
    <TextView
        android:id="@+id/sem_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_alignParentRight="true"
        android:text="@string/sem_name_heading"
        
         />
     <TextView 
        android:id="@+id/heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sem_name_heading"
        android:text="@string/heading_line"
        android:layout_alignParentRight="true"
        android:textColor="#757575"/>
     <ListView 
         android:id="@+id/sem_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/heading1">
         
     </ListView>

</RelativeLayout>
